--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
-
-
+html {
+    scroll-behavior: smooth;
+}
 .m_text{
     font-size: 14px;
     font-weight: bold;
@@ -279,8 +280,18 @@ body{
 .user_comment{
     font-size: 13px;
     letter-spacing: 0.2px;
-    color:#999;
+    color: #1b1b1b;
     padding: 6px 20px;
+}
+.slice_comment{
+    color : #666666;
+    font-size: 13px;
+    text-decoration:none;
+}
+.slice_comment:hover{
+    color : darkgoldenrod;
+    text-decoration:none;
+    scroll-behavior: smooth;
 }
 
 .contents .comment_field{
