--- a/fontello-36152b29/css/fontello.css
+++ b/fontello-36152b29/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?33171920');
-  src: url('../font/fontello.eot?33171920#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?33171920') format('woff2'),
-       url('../font/fontello.woff?33171920') format('woff'),
-       url('../font/fontello.ttf?33171920') format('truetype'),
-       url('../font/fontello.svg?33171920#fontello') format('svg');
+  src: url('../font/fontello.eot?22628074');
+  src: url('../font/fontello.eot?22628074#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?22628074') format('woff2'),
+       url('../font/fontello.woff?22628074') format('woff'),
+       url('../font/fontello.ttf?22628074') format('truetype'),
+       url('../font/fontello.svg?22628074#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?33171920#fontello') format('svg');
+    src: url('../font/fontello.svg?22628074#fontello') format('svg');
   }
 }
 */
@@ -56,3 +56,6 @@
 }
  
 .icon-down-dir:before { content: '\e800'; } /* '' */
+.icon-trash:before { content: '\e801'; } /* '' */
+.icon-cancel:before { content: '\e802'; } /* '' */
+.icon-pencil:before { content: '\e803'; } /* '' */
