comment delete button modify
내 아이디 일시 버튼이 보이고 , 내 아이디가 아닐 시 버튼이 보이지 않게 수정

--- a/css/fontello-sample.css
+++ b/css/fontello-sample.css
@@ -3,10 +3,11 @@
     font-family : fontello;
     padding-left: 20px;
 }
-.delete{
+.delete_inline{
     display: inline;
     float: right;
 }
+
 .delete1{
     display: inline;
 }
