--- a/css/login.css
+++ b/css/login.css
@@ -1,24 +1,88 @@
-.ui-page .ui-header{
-    background-color: rgb(146,178,140);
-    text-shadow: none;
+
+
+.form_container{
+    width: 350px;
+    margin: 0 auto
+
 }
-.ui-page .ui-footer{
-    background-color: rgb(146,178,140);
-    text-shadow: none;
+
+.form_container .form{
+    background-color: #fff;
+    border: 1px solid #e6e6e6;
+    padding: 0 40px 25px 40px;
+    margin-bottom: 30px;
 }
-.form1{
-    padding-top: 50px;
+
+
+.form .title {
+    overflow: hidden;
+    text-indent: 110%;
+    margin: 22px auto 8px;
 }
-.wizard3-1{
-    padding-top: 50px;
+
+
+.form label{
+    display: inline-block;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: 700;
 }
-#back, #home {
-    background-color: #8bc34a9e;
-    text-shadow: none;
-    font-weight: bold;
-    outline :0;
-    border: none !important;
+
+.form input{
+    width: 100%;
+    background: 0 0;
+    border: 1px solid #efefef;
+    border-radius: 3px;
+    box-sizing: border-box;
+    color: #262626;
+    font-size: 14px;
+    padding: 7px 8px 7px;
 }
-#cancel1, #login{
-    background-color:forestgreen;
+
+.form p{
+    margin-bottom: 10px;
 }
+
+.form .submit_btn{
+    background: #4B946A;
+    border-color:#4B946A;
+    color: #fff;
+    border-radius: 3px;
+    border-style: solid;
+    border-width: 1px;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 28px;
+    outline: none;
+    width: 100%;
+    padding: 0;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+.bottom_box{
+    text-align: center;
+    /*height: 290px;*/
+    background-color: #fff;
+    border: 1px solid #e6e6e6;
+    padding: 20px 40px 25px 40px;
+    /*display: flex;*/
+    /*align-items: center;*/
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
